part2 - Toolbars and NavigationView

--- a/app/src/main/res/layout/layout_bottom_navigation_view.xml
+++ b/app/src/main/res/layout/layout_bottom_navigation_view.xml
@@ -9,7 +9,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/bottomNavViewBar"
-            android:background="@color/colorPrimary">
+            android:background="@drawable/white_grey_border_top"
+            >
 
 
         </android.support.design.widget.BottomNavigationView>
