part8 - Building the Profile Part 1

--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -10,6 +10,8 @@
 
         <include layout="@layout/snippet_top_prolfilebar"/>
 
+
+        <include layout="@layout/layout_bottom_navigation_view"/>
     </RelativeLayout>
 
 </android.support.design.widget.CoordinatorLayout>
