--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -8,10 +8,17 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <include layout="@layout/snippet_top_prolfilebar"/>
+        <include layout="@layout/layout_center_profile"/>
 
 
         <include layout="@layout/layout_bottom_navigation_view"/>
+
+        <ProgressBar
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:id="@+id/profileProgressBar"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="100dp"/>
     </RelativeLayout>
 
 </android.support.design.widget.CoordinatorLayout>
