part16 - Sqare ImageViews

--- a/app/src/main/res/layout/layout_grid_imageview.xml
+++ b/app/src/main/res/layout/layout_grid_imageview.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent">
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content">
 
-    <ImageView
+    <tabian.com.instagramclone.Utils.SqaureImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="centerCrop"
