--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -94,7 +94,8 @@
         android:textSize="20sp"
         android:layout_alignBottom="@+id/progressBar"
         android:layout_alignRight="@+id/progressBar"
-        android:layout_alignLeft="@+id/progressBar"/>
+        android:layout_alignLeft="@+id/progressBar"
+        android:id="@+id/loadingPleaseWait"/>
 
 </RelativeLayout>
 
