part62 - Activity Animations

--- a/app/src/main/res/layout/layout_grid_imageview.xml
+++ b/app/src/main/res/layout/layout_grid_imageview.xml
@@ -3,7 +3,7 @@
               android:layout_width="wrap_content"
               android:layout_height="wrap_content">
 
-    <tabian.com.instagramclone2.Utils.SqaureImageView
+    <tabian.com.instagramclone2.Utils.SquareImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="centerCrop"
