--- a/app/src/main/res/layout/fragment_view_comments.xml
+++ b/app/src/main/res/layout/fragment_view_comments.xml
@@ -7,7 +7,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/relLayout1">
-        
+
+        <include layout="@layout/snippet_comments_toolbar"/>
 
     </RelativeLayout>
 
@@ -18,6 +19,10 @@
         android:layout_below="@+id/relLayout1"
         android:layout_marginBottom="60dp">
 
+        <ListView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/listView"></ListView>
 
 
     </RelativeLayout>
