--- a/app/src/main/res/layout/snippet_searchbar.xml
+++ b/app/src/main/res/layout/snippet_searchbar.xml
@@ -17,7 +17,7 @@
                 android:layout_height="match_parent">
 
 
-                <TextView
+                <EditText
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
