--- a/app/src/main/res/layout/layout_center_viewpager.xml
+++ b/app/src/main/res/layout/layout_center_viewpager.xml
@@ -7,7 +7,7 @@
         <android.support.v4.view.ViewPager
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/container">
+            android:id="@+id/viewpager_container">
 
 
         </android.support.v4.view.ViewPager>
